[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neurovc"
version = "0.0.0"
description = "Framework for Computer Vision setups in Neuroscience"
authors = [
    { name="Philipp Flotho", email="Philipp.Flotho@uni-saarland.de" }
]
license = { text = "CC BY-NC-SA 1.0" }
dependencies = [
    "charset-normalizer>=2.1.1,<3.0.0",
    "colorama>=0.4.5,<1.0.0",
    "contourpy>=1.0.5,<2.0.0",
    "cycler>=0.11.0,<1.0.0",
    "einops>=0.5.0,<1.0.0",
    "filelock>=3.8.0,<4.0.0",
    "fonttools>=4.37.4,<5.0.0",
    "h5py>=3.7.0,<4.0.0",
    "huggingface-hub>=0.10.0,<1.0.0",
    "idna>=3.4,<4.0",
    "ivy-core>=1.1.10,<2.0.0",
    "ivy-mech>=1.1.9,<2.0.0",
    "ivy-vision>=1.1.9,<2.0.0",
    "kiwisolver>=1.4.4,<2.0.0",
    "matplotlib>=3.6.1,<4.0.0",
    "numpy>=1.23.3,<2.0.0",
    "nvidia-ml-py3>=7.352.0,<8.0.0",
    "opencv-python>=4.6.0.66,<5.0.0",
    "packaging>=21.3,<22.0",
    "Pillow>=9.2.0,<10.0.0",
    "psutil>=5.9.2,<6.0.0",
    "pyparsing>=3.0.9,<4.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "PyYAML>=6.0,<7.0",
    "requests>=2.28.1,<3.0.0",
    "scipy>=1.9.2,<2.0.0",
    "six>=1.16.0,<2.0.0",
    "termcolor>=2.0.1,<3.0.0",
    "timm>=0.6.11,<1.0.0",
    "torch>=1.12.1",
    "torchaudio>=0.12.1",
    "torchvision>=0.13.1,<1.0.0",
    "tqdm>=4.64.1,<5.0.0",
    "typing_extensions>=4.4.0,<5.0.0",
    "urllib3>=1.26.12,<2.0.0",
    "wincertstore>=0.2,<1.0.0",
    "yacs>=0.1.8,<1.0.0",
    "tensorboard>=2.0.0,<3.0.0",
    "parse>=1.19.0,<2.0.0",
    "loguru>=0.5.0,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]
