[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neurovc"
dynamic = ["version"]
description = "Framework for Computer Vision setups in Neuroscience"
readme = "README.md"
authors = [
    { name = "Philipp Flotho", email = "Philipp.Flotho@uni-saarland.de" }
]
license = { text = "CC BY-NC-SA 4.0" }
requires-python = ">=3.6"

dependencies = [
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.10.0",
    "scipy>=1.10.0",
    "numba>=0.58.0",
    "Pillow>=10.2.0",
    "h5py>=3.11.0",
    "moderngl>=5.12.0",
    "mediapipe>=0.10.0",
]

[project.optional-dependencies]
landmark = [
    "requests>=2.32.0",
    "tqdm>=4.0.0",
    "yolov5-face==0.0.1a1",
    "torch>=2.4.0",
]
torch = [
    "torch>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/pyflowreg/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
